<resources>
    <string name="app_name">Seeds</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="seeds_logo">Seeds</string>
    <string name="seeds_teamlogo">Copyright © SimpleLife Studio</string>
    <string name="seeds_datelist_datedefault">Mon-Date</string>
    <string name="seeds_datelist_seedsnumberdefault">Not-Syncronized</string>
    <string name="seeds_datelist_seedsnumbernoupdate">No-Update</string>
    <string name="seeds_datelist_seedsnumbernotready">Not-Ready</string>
    <string name="seeds_datelist_seedsnumber">Seeds Number: </string>
    <string name="seeds_datelist_befyesterday">前 天</string>
    <string name="seeds_datelist_yesterday">昨 天</string>
    <string name="seeds_datelist_today">今 天</string>
    <string name="seeds_datelist_update">Syncronize All</string>
    <string name="seeds_datelist_config">Settings</string>
    <string name="seeds_datelist_httpserver">Share Service</string>
    <string name="seeds_datelist_favoritelist">Favorite List</string>
    <string name="seeds_datelist_plswait">Please Wait</string>
    <string name="seeds_datelist_conntoserver">Connecting To Server</string>
    <string name="seeds_datelist_retrievestatus">Retrieving Seeds Status Info</string>
    <string name="seeds_datelist_analyzeseedsstatus">Analyzing Seeds Info Status</string>
    <string name="seeds_datelist_analyzeseedsdata">Analyzing Seeds Data</string>
    <string name="seeds_datelist_downloadseedsinfo">Dowloading Seeds Info</string>
    <string name="seeds_datelist_saveseedsinfo">Saving Seeds Info</string>
    <string name="seeds_datelist_updatestatuscommerror">Failed to Connect to Server</string>
    <string name="seeds_datelist_seedsbydatecommerror">Communicate With Server Failed</string>
    <string name="seeds_datelist_seedsinfonotready">Seeds Data Not Ready</string>
    <string name="seeds_datelist_seedsinfonoupdate">Seeds Date No Update</string>
    <string name="seeds_datelist_emptyupdatestatusresp">Empty Message Detected</string>
    <string name="seeds_datelist_emptyseedsbydateresp">Empty Message Detected</string>
    <string name="seeds_datelist_noneedtosync">All Date Has Been Syncronized</string>
    <string name="seeds_listperday_title">Seeds List</string>
    <string name="seeds_listperday_mosaic">Mosaic</string>
    <string name="seeds_listperday_nomosaictag1">无</string>
    <string name="seeds_listperday_nomosaictag2">無</string>
    <string name="seeds_listperday_withmosaic">Mocaic</string>
    <string name="seeds_listperday_withoutmosaic">No-Mosaic</string>
    <string name="seeds_listperday_seedspics"> Images</string>
    <string name="seeds_list_contextualdel">Delete</string>
    <string name="seeds_list_contextualtitle">Select Items</string>
    <string name="seeds_list_contextualsubtitle1">Selected</string>
    <string name="seeds_list_contextualsubtitle2">items</string>
    <string name="seeds_favlist_empty">No Seed in Favorite list.</string>
    <string name="seeds_rsslist_empty">RSS Cart is empty.</string>
    <string name="seeds_favlist_deletedialogmsg">Remove the selected seeds from favorite list? 
        Seeds with the publish date three days before will be lost.</string>
    <string name="seeds_favlist_deletedialognote">Unsubscribe</string>
    <string name="seeds_favlist_deletedialogpos">Confirm</string>
    <string name="seeds_favlist_deletedialogneg">Cancel</string>
    <string name="seeds_favlist_deletedialoging">Removing the seeds from favorite list&#8230;</string>
    <string name="seeds_favlist_deletedialogdone">Unsubscribe successfully</string>
    <string name="seeds_rsslist_deletedialogmsg">Remove the selected seeds from RSS list?</string>
    <string name="seeds_rsslist_deletedialognote">Unsubscribe</string>
    <string name="seeds_rsslist_deletedialogpos">Confirm</string>
    <string name="seeds_rsslist_deletedialogneg">Cancel</string>
    <string name="seeds_rsslist_deletedialoging">Removing the seeds from RSS list&#8230;</string>
    <string name="seeds_rsslist_deletedialogdone">Unsubscribe successfully</string>
    <string name="seedTitle">The title of the seed</string>
    <string name="seedSize">The size of the seed</string>
    <string name="seedFormat">The format of the seed</string>
    <string name="seeds_details_top">Seed Details</string>
    <string name="seeds_Favorite">Favorite</string>
    <string name="seeds_UnFavorite">UnFavorite</string>
    <string name="seeds_preffilename">com.simplelife.seeds.SEEDS_STATUS_BYDATE</string>
    <string name="seeds_preffilename_seedsnum">com.simplelife.seeds.SEEDS_NUMBER_BYDATE</string>
    <string name="seeds_preffilename_seedsrss">com.simplelife.seeds.SEEDS_RSS_ID</string>
    <string name="seeds_startverify">Password Please</string>
    <string name="seeds_pwdmessage">Enter the password</string>
    <string name="seeds_pwdsend">Send</string>
    <string name="seeds_verify_menu_settings">Settings</string>
    <string name="title_activity_display_message">Wrong Password</string>
    <string name="seeds_severaddrmsg">Enter IP Address and Port</string>
    <string name="seeds_severaddrverify">Verify</string>
    <string name="seeds_download_seed">Download Seeds</string>
    <string name="seeds_download_mgt">Download Management</string>
    <string name="seeds_download_added">Added to download queue</string>
    <string name="seeds_unfav_done">Remove from favorite done</string>
    <string name="seeds_fav_done">Favorited successfully</string>
    <string name="actionbar_activity_not_found">Failed to open intent&#8230;</string>
    <string name="seeds_details_to_grid">Grid Mode</string>
    <string name="seeds_details_addto_fav">Add to Fav List</string>
    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="seeds_http_title">HTTP Server</string>
    <string name="seeds_wireless_title">Notice</string>
    <string name="seeds_wireless_setwifi">Set WIFI</string>
    <string name="seeds_wireless_continue">Ignore</string>
    <string name="seeds_wireless_nowifino3g">
        Your WIFI and 3G are closed, set WIFI now? Downloading images without WIFI has been disabled by default, please enable it inside Settings. 
        WARNING: Large data will be exhausted without WIFI!
    </string>
    <string name="seeds_wireless_nowifi">
        Your WIFI is closed, set WIFI now?  Downloading images without WIFI has been disabled by default, please enable it inside Settings. 
        WARNING: Large data will be exhausted without WIFI!
    </string>
    <string name="seeds_password_note">Please input your gesture</string>
    <string name="seeds_password_create">Create gesture password</string>
    <string name="seeds_password_startdraw">Start to draw</string>
    <string name="seeds_password_logincorrect">Login Successfully!</string>
    <string name="seeds_password_loginfailed">Login Failed, Please Retry!</string>
    <string name="seeds_password_drawstatus">Please specify a new gesture password</string>
    <string name="seeds_password_drawsrecorded">The password has been recorded!</string>
    <string name="seeds_password_confirmdrawstatus">Please re-enter the password to confirm:</string>
    <string name="seeds_password_confirmdrawstatusdone">Your new gesture password:</string>
    <string name="seeds_password_inputpwd">Please enter the password</string>
    <string name="seeds_password_cancel">Cancel</string>
    <string name="seeds_password_redraw">Redraw</string>
    <string name="seeds_password_continue">Continue</string>
    <string name="seeds_password_save">Confirm</string>
    <string name="seeds_setpassword_entercurrnt">Please confirm the current password:</string>
    <string name="seeds_setpassword_correct">Correct password, please enter a new password!</string>
    <string name="seeds_setpassword_wrong">Wrong password, please retry!</string>
    <string name="seeds_setpassword_success">Password changed successfully!</string>
    <string name="seeds_setpassword_firstsuccess">Password created successfully!</string>
    <string name="seeds_setpassword_failed">Empty password, please retry!</string>
    <string name="seeds_setpassword_enterpwd">Please enter the password</string>
    <string name="seeds_password_tooshort">The password is too short, please retry!</string>
    <string name="seeds_rss_menuaddtocart">Add To RSS Cart</string>
    <string name="seeds_rss_management">RSS Management</string>
    <string name="seeds_rss_toast_addtocartdone">Add to RSS cart done</string>
    <string name="seeds_rss_toast_addtocartnonecc">This seed is already in cart</string>
    <string name="seeds_rss_toast_sendreqfailed">Network failure, book failed</string>
    <string name="seeds_rss_toast_emptycartresp">Wrong response, book failed</string>
    <string name="seeds_rss_toast_booksuccess">Book Successed, cart id: </string>
    <string name="seeds_rss_toast_cartempty">No seed is booked, the cart is empty</string>
    <string name="seeds_rss_menu_sendreqmsg">Send RSS Message</string>
    <string name="seeds_rss_menu_removeall">Remove</string>
    <string name="seeds_rss_menu_change">Request New ID</string>
    <string name="seeds_rss_menu_define">Define New ID</string>
    <string name="seeds_rss_dialog_sendingreqmsg">Sending book request&#8230;</string>
    <string name="seeds_rss_dialog_message">Book successfully! Store the cart ID into file? Cart ID:</string>
    <string name="seeds_rss_dialog_note">Note</string>
    <string name="seeds_rss_dialog_btnpos">Confirm</string>
    <string name="seeds_rss_dialog_btnneg">Cancel</string>
    <string name="seeds_rss_dialog_writefile">Creating file&#8230;</string>
    <string name="seeds_rss_dialog_filecreated">Cart ID has been stored in file: </string>
    <string name="seeds_rss_dialog_fileget">Please use the Share Servce to get the file from smart phone.</string>
    <string name="seeds_rss_tabbar_title1">Book List</string>
    <string name="seeds_rss_tabbar_title2">RSS ID</string>
    <string name="seeds_rss_idmgt_idtitle">Current RSS ID (Long press to copy):</string>
    <string name="seeds_rss_idmgt_id">No RSS ID available.</string>
    <string name="seeds_rss_idmgt_linktitle">Current RSS Link (Long press to copy):</string>
    <string name="seeds_rss_idmgt_link">No RSS link available.</string>
    <string name="seeds_rss_idmgt_contextmenutitle">Options</string>
    <string name="seeds_rss_idmgt_contextmenu1">Copy</string>
    <string name="seeds_config_serverpref">Server Preference</string>
    <string name="seeds_config_modifyserveraddrtitle">Change Server Address</string>
    <string name="seeds_config_modifyserveraddrsum">Change the IP address of server</string>
    <string name="seeds_config_selectchantitle">Select Channel</string>
    <string name="seeds_config_selectchansum">Select the Channels to which the seeds subscribed</string>
    <string name="seeds_help_page4title">Convenient seeds download and share service</string>
    <string name="seeds_help_page4title2">Share</string>
    <string name="seeds_help_page4title3">Wireless Enviroment</string>
    <string name="seeds_help_page5title">You can book the seeds, and start the remote download</string>
    <string name="seeds_help_page5title2">RSS ID</string>
    <string name="seeds_help_page5title3">Store into file</string>
    <string name="seeds_help_page5title4">The RSS ID will be stored into file with the info of the seeds booked,
        please use share service to retrieve the file</string>
    <string name="seeds_help_page6title">Now Start</string>
    <string name="seeds_help_page6title2">The journey of Seeds</string>
    <string name="seeds_help_page6title3">Start</string>
</resources>