<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2013 SimpleLife Studio All rights reserved
   
   seeds_download_management.xml
   Seeds
 
   Created by Chris Li on 13-5-20. 
-->
 
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/menu_to_grid"
          android:icon="@drawable/collections_view_as_grid"
          android:showAsAction="ifRoom"
          android:title="@string/seeds_details_to_grid"/>
    
    <item android:id="@+id/menu_addto_fav"
          android:icon="@drawable/rating_good"
          android:showAsAction="ifRoom"
          android:title="@string/seeds_details_addto_fav"/>
           
    <item
        android:id="@+id/rss_addtocart"
        android:showAsAction="never"
        android:title="@string/seeds_rss_menuaddtocart"/>
    
    <item
        android:id="@+id/rss_management"
        android:showAsAction="never"
        android:title="@string/seeds_rss_management"/>
        
    <item
        android:id="@+id/download_seed"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="never"
        android:title="@string/seeds_download_seed"/>
    
    <item
        android:id="@+id/download_mgt"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="never"
        android:title="@string/seeds_download_mgt"/>

</menu>