<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/seedslist_selector"
    android:orientation="horizontal"
    android:padding="5dip" >
    
    <!-- The zoom out image on left side -->
    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dip"
        android:background="@drawable/seedsimage_bg"
        android:padding="3dip" >

        <ImageView
            android:id="@+id/list_image"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/rihanna" />
    </LinearLayout>

    <!-- The name of the Seeds -->
    <TextView
        android:id="@+id/seeds_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/thumbnail"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_toLeftOf="@+id/seeds_format"
        android:layout_marginRight="2dip"
        android:text="@string/seedTitle"
        android:textColor="#040404"
        android:textSize="15sp"
        android:textStyle="bold"
        android:lines="2"
        android:ellipsize="end"
        android:typeface="sans" />

    <!-- The size of the Seeds -->
    <TextView
        android:id="@+id/seeds_size"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/seeds_title"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_toLeftOf="@+id/seeds_mosaic"
        android:contentDescription="@string/hello_world"
        android:text="@string/seedSize"
        android:textColor="#343434"
        android:textSize="12sp"
        android:ellipsize="end" />

    <!-- The format of the Seeds -->
    <TextView
        android:id="@+id/seeds_format"
        android:layout_width="60dip"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/seeds_title"
        android:layout_marginRight="3dip"
        android:gravity="right"
        android:text="@string/seedFormat"
        android:textColor="#10bcc9"
        android:lines="1"
        android:textSize="12sp"
        android:textStyle="bold" 
        android:ellipsize="end"/>
        
    <TextView
        android:id="@+id/seeds_mosaic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/seeds_size"
        android:layout_marginRight="3dip"
        android:gravity="right"
        android:text="@string/seeds_listperday_mosaic"
        android:textColor="#343434"
        android:textSize="12sp" />

    <!-- Check out the details -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/hello_world"
        android:src="@drawable/arrow1" />
    

</RelativeLayout>