<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="10dip"
    android:paddingRight="10dip" >

    <TextView
        android:id="@+id/setpwd_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dip"
        android:layout_centerHorizontal="true"
        android:text="@string/seeds_password_create"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <com.simplelife.seeds.android.utils.password.LocusPassWordView
        android:id="@+id/mLocusPassWordView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </com.simplelife.seeds.android.utils.password.LocusPassWordView>
    
    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="15dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/setpwd_reset"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@drawable/actionbar_btn"
            android:gravity="center_vertical|center"
            android:text="@string/seeds_password_cancel"
            android:textColor="#FFFFFF" >
        </TextView>
        
        <View    
            android:layout_width="1dp"   
            android:layout_height="fill_parent"
            android:layout_marginBottom="3dip"
            android:layout_marginTop="3dip"    
            android:background="#FFFFFFFF" /> 
           
        <TextView
            android:id="@+id/setpwd_save"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@drawable/actionbar_btn"
            android:gravity="center_vertical|center"
            android:text="@string/seeds_password_continue"
            android:textColor="#FFFFFF" >
        </TextView>

    </LinearLayout>

</RelativeLayout>